# msmp-rs

./: Cargo.toml  README.md
msmp/: Cargo.toml
msmp-cli/: Cargo.toml  README.md
msmp-cli/src/: main.rs
msmp-web/: Cargo.toml  index.html
msmp-web/pkg/: msmp_web.d.ts  msmp_web.js  msmp_web_bg.wasm  msmp_web_bg.wasm.d.ts  package.json
msmp-web/src/: lib.rs
msmp/src/: lib.rs  packet.rs  protocol.rs  service.rs
