[package]
name = "msmp-cli"
version = "0.1.0"
edition = "2021"
authors = ["Kenta Ida <fuga@fugafuga.org>"]
license = "MIT"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap-num = "1.1.1"
env_logger = "0.11.3"
hex = "0.4.3"
indicatif = "0.17.8"
log = { version = "0.4.21", features = ["std"] }
nb = "1.1.0"
msmp = { path = "../msmp", features = ["std", "async"] }
serialport = "4.3.0"
tokio = { version = "1.41.1", features = ["full"] }
anyhow = { version = "1.0.93", features = ["backtrace"] }
tokio-serial = "5.4.4"
